<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">smzdw</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="fa_heart_o">&#xf08a;</string>
    <string name="fa_location_arrow">&#xf124;</string>
    <string name="fa_clock_o">&#xf017;</string>
    <string name="fa_share_alt">&#xf1e0;</string>
    <string name="fa_gear">&#xf013;</string>
    <string name="fa_paw">&#xf1b0;</string>
    <string name="fa_search">&#xf002;</string>
    <string name="fa_envolope">&#xf0e0;</string>

</resources>
