<!--
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cccc"
    android:choiceMode="singleChoice"
    android:divider="@android:color/transparent"
    android:dividerHeight="0dp"
    tools:context="com.itravel.smzdw.NavigationDrawerFragment" />-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <com.itravel.smzdw.widgets.RoundImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/portrait_1" />
        
        <LinearLayout 
            android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:layout_marginLeft="10dp"
        android:orientation="vertical"
            
            >
            <TextView 
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
                android:text="叽里咕噜游世界"
                android:textColor="#111111"
                android:textSize="16dp"
                android:textStyle="bold"
                />
            <TextView 
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
                android:text="guest1234@smzdw.com"
                android:textColor="#666666"
                android:textSize="14dp"
                android:textStyle="normal"
                />
            
            
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#cccccc"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        
        android:orientation="horizontal" >

        <com.itravel.smzdw.widgets.TypeFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/fa_search"
            android:textColor="#000000"
            android:textSize="24dp" >
        </com.itravel.smzdw.widgets.TypeFontTextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="探索"
            android:textColor="#111111"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="10dp"
  android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <com.itravel.smzdw.widgets.TypeFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/fa_paw"
            android:textColor="#000000"
            android:textSize="24dp" >
        </com.itravel.smzdw.widgets.TypeFontTextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="发现"
            android:textColor="#111111"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#cccccc"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="32dp"
                android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <com.itravel.smzdw.widgets.TypeFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/fa_gear"
            android:textColor="#000000"
            android:textSize="24dp" >
        </com.itravel.smzdw.widgets.TypeFontTextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="设置"
            android:textColor="#111111"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="32dp"
               android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <com.itravel.smzdw.widgets.TypeFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/fa_envolope"
            android:textColor="#000000"
            android:textSize="24dp" >
        </com.itravel.smzdw.widgets.TypeFontTextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="反馈"
            android:textColor="#111111"
            android:textSize="16dp" />
    </LinearLayout>

</LinearLayout>