<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.itravel.smzdw.fragments.ActivityDetailFragment" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/activity_image"
                    android:layout_width="fill_parent"
                    android:layout_height="250dp"
                    android:contentDescription="acttivity"
                    android:scaleType="center"
                    android:src="@drawable/act_1" />

                <com.itravel.smzdw.widgets.TypeFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/fa_share_alt"
                    android:textColor="#ffff"
                    android:textSize="24dp" />
                
                <com.itravel.smzdw.widgets.TypeFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="68dp"
                    android:layout_marginRight="20dp"
                    android:textColor="#ffff"
                    android:text="@string/fa_heart_o"
                    android:textSize="24dp" />
                
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="vertical"
                android:padding="12dp" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/start_end_time_label"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:text="@string/fa_clock_o"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/start_end_time"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:text="N/A"
                        android:textSize="16dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/activity_detail_scenery_spot_label"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:text="@string/fa_location_arrow"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/activity_detail_scenery_spot"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:text="N/A"
                        android:textSize="16dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#cccccc"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="描述"
                    android:textSize="24dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:text="    活动为半自助穿越旅行，全程包车（大巴+越野车）深入草原腹地，低强度，随性走，自在摄影，氛围轻松，深度体验。主要景点：塞罕坝、神龙潭、七星湖、御道口大峡谷穿越、桃山湖；越野车行车线路-蘑菇场、康熙湖、十里画廊、放羊滩、葫芦峪、沙湖、杨树背、四方城、北沟北、余家店、成吉思汗山、五彩山；将军泡子；影视基地；百草敖包。浑善达克沙地公园/姑娘湖/汇宗寺。"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#cccccc"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="行程"
                    android:textSize="24dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_journey"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:text="    活动为半自助穿越旅行，全程包车（大巴+越野车）深入草原腹地，低强度，随性走，自在摄影，氛围轻松，深度体验。主要景点：塞罕坝、神龙潭、七星湖、御道口大峡谷穿越、桃山湖；越野车行车线路-蘑菇场、康熙湖、十里画廊、放羊滩、葫芦峪、沙湖、杨树背、四方城、北沟北、余家店、成吉思汗山、五彩山；将军泡子；影视基地；百草敖包。浑善达克沙地公园/姑娘湖/汇宗寺。"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#cccccc"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="须知"
                    android:textSize="24dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_tips"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:text="    活动为半自助穿越旅行，全程包车（大巴+越野车）深入草原腹地，低强度，随性走，自在摄影，氛围轻松，深度体验。主要景点：塞罕坝、神龙潭、七星湖、御道口大峡谷穿越、桃山湖；越野车行车线路-蘑菇场、康熙湖、十里画廊、放羊滩、葫芦峪、沙湖、杨树背、四方城、北沟北、余家店、成吉思汗山、五彩山；将军泡子；影视基地；百草敖包。浑善达克沙地公园/姑娘湖/汇宗寺。"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="#eeff3333"
       >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="马上预定"
            android:gravity="center_vertical|center"
            android:textColor="#ffffff"
            android:textSize="24dp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>